--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       obniz.display.print("patipatiDrop");
     };
 
-    // More API functions here:
+    // More API functions here:o
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
@@ -60,9 +60,9 @@
 
 
 
-    window.onload = function () {
-      init();
-    };
+    // window.onload = function () {
+    //   init();
+    // };
 
     // Load the image model and setup the webcam
     // async function init() {
